--- a/app/src/main/res/layout/activity_main_tools.xml
+++ b/app/src/main/res/layout/activity_main_tools.xml
@@ -40,10 +40,11 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Button"
+                android:text="Torcia"
                 android:background="@drawable/round_button"
                 android:id="@+id/button2"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="goToTorcia" />
         </TableRow>
 
 
